style: add colors and spacing to Card, Products and fix null error

--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,3 +1,21 @@
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--secondary-color);
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    width: 100vw;
+    border-bottom: 1px solid black;
+    position: relative;
+    top: 0;
+}
+
+.line-seperatior {
+    width: 100vw;
+}
+
 .cart {
     display: flex;
     justify-content: center;
@@ -7,7 +25,7 @@
 }
 
 .cart-link {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 svg {
@@ -37,10 +55,10 @@ svg {
     font-size: 2rem;
 }
 
-.body {
+.nav-body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-self: center;
     align-self: center;
-    width: 80%;
+    width: 100vw;
 }
