--- a/src/Products/Product.module.css
+++ b/src/Products/Product.module.css
@@ -6,22 +6,39 @@
 
 .cart-image {
     width: 75px;
-    border: 1px solid black;
+    border: 1px solid var(--secondary-color);
     border-radius: 10px;
     padding: 0.2rem;
+    box-shadow: 0px 0px 5px var(--secondary-color);
+}
+
+.checkout-btn {
+    background-color: var(--main-color);
 }
 
 .cart-item {
     display: flex;
     position: relative;
     gap: 0.5rem;
-    border: 1px solid black;
+    border: 1px solid var(--secondary-color);
+    box-shadow: 0px 0px 5px var(--secondary-color);
     border-radius: 10px;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .cart-title {
     text-decoration: underline;
+    max-width: 30ch;
+}
+
+.remove-item-btn {
+    position: absolute;
+    text-align: center;
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    right: 0.5rem;
+    top: 0.5rem;
 }
 
 .image-container {
@@ -38,6 +55,7 @@
     border-radius: 10px;
     border: 1px solid black;
     grid-template-rows: 1.5fr 1fr;
+    width: fit-content;
     box-shadow: 0px -5px 20px -3px black;
     transition: all 250ms;
 }
@@ -53,7 +71,7 @@
 }
 
 .product-body {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     color: black;
     padding: 1rem;
     border-end-start-radius: 10px;
@@ -70,7 +88,7 @@
 }
 
 .number-of-product {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     color: black;
     padding-inline: 5px;
     width: 40px;
