--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    --main-color: rgb(221, 216, 118);
+    --secondary-color: rgb(209, 94, 174);
+}
+
+#root {
+  min-height: 100vh;
 }
 
 a {
@@ -30,6 +37,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: var(--main-color);
 }
 
 h1 {
@@ -42,11 +50,13 @@ button {
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
+    text-align: center;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: var(--secondary-color);
     cursor: pointer;
     transition: border-color 0.25s;
+    border: 1px solid black;
 }
 button:hover {
     border-color: #646cff;
@@ -64,17 +74,4 @@ h5,
 h6,
 p {
     margin: 0;
-}
-
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
-    }
 }
